--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^3.3.7",
     "gsap": "1.19.1",
     "jquery": "^3.1.1",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "angular-loading-bar": "0.9.0"
   },
   "scripts": {
     "prestart": "npm install",
